--- a/style.css
+++ b/style.css
@@ -1,5 +1,61 @@
+html {
+    width: 100vw;
+}
+
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: hsl(47, 88%, 63%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#card {
+    width: 365px;
+    height: 520px;
+    border: solid 1px;
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 5px 5px;
+}
+
+@media (width < 321px) {
+    body {
+            width: 100vw;
+            height: 100vh;
+            background-color: hsl(47, 88%, 63%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+    #card {
+            width: 290px;
+            height: 520px;
+            border: solid 1px;
+            border-radius: 25px;
+            background-color: white;
+            box-shadow: 5px 5px;
+        }
+}
+
+@media (376px > width > 320px) {
+    body {
+        width: 100vw;
+        height: 100vh;
+        background-color: hsl(47, 88%, 63%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #card {
+        width: 335px;
+        height: 520px;
+        border: solid 1px;
+        border-radius: 25px;
+        background-color: white;
+        box-shadow: 5px 5px;
+    }
 }
