--- a/style.css
+++ b/style.css
@@ -15,29 +15,78 @@ body {
     width: 365px;
     height: 520px;
     border: solid 1px;
-    border-radius: 25px;
+    border-radius: 15px;
     background-color: white;
     box-shadow: 5px 5px;
 }
 
+#card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#post-preview-svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 22px;
+}
+#svg-container {
+    width: 96%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#svg {
+    width: 100%;
+    border-radius: 10px;
+}
+
 @media (width < 321px) {
     body {
-            width: 100vw;
-            height: 100vh;
-            background-color: hsl(47, 88%, 63%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+        width: 100vw;
+        height: 100vh;
+        background-color: hsl(47, 88%, 63%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     #card {
-            width: 275px;
-            height: 480px;
-            border: solid 1px;
-            border-radius: 25px;
-            background-color: white;
-            box-shadow: 5px 5px;
-        }
+        width: 275px;
+        height: 480px;
+        border: solid 1px;
+        border-radius: 25px;
+        background-color: white;
+        box-shadow: 5px 5px;
+    }
+
+    #card-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #post-preview-svg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    
+    #svg-container {
+        width: 86%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #svg {
+        width: 100%;
+        border-radius: 10px;
+    }
 }
 
 @media (376px > width > 320px) {
@@ -57,5 +106,28 @@ body {
         border-radius: 25px;
         background-color: white;
         box-shadow: 5px 5px;
+    }
+
+    #card-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #post-preview-svg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 18px;
+    }
+    #svg-container {
+        width: 88%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #svg {
+        width: 100%;
+        border-radius: 10px;
     }
 }
