--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     width: 100vw;
     height: 100vh;
+    margin: 0;
     background-color: hsl(47, 88%, 63%);
     display: flex;
     justify-content: center;
@@ -41,6 +42,25 @@ body {
 #svg {
     width: 100%;
     border-radius: 10px;
+}
+
+#post-theme {
+    width: 86%;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 24px;
+}
+
+#theme-container {
+    background-color: hsl(47, 88%, 63%);
+    border-radius: 5px;
+}
+
+h3 {
+    font-family: Figtree;
+    font-weight: 800;
+    padding: 8px 18px;
+    margin: 0;
 }
 
 @media (width < 321px) {
@@ -87,6 +107,24 @@ body {
         width: 100%;
         border-radius: 10px;
     }
+    #post-theme {
+        width: 86%;
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 20px;
+    }
+
+    #theme-container {
+        background-color: hsl(47, 88%, 63%);
+        border-radius: 5px;
+    }
+
+    h3 {
+        font-family: Figtree;
+        font-weight: 800;
+        padding: 6px 16px;
+        margin: 0;
+    }
 }
 
 @media (376px > width > 320px) {
@@ -118,7 +156,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 18px;
+        margin-top: 24px;
     }
     #svg-container {
         width: 88%;
@@ -129,5 +167,24 @@ body {
     #svg {
         width: 100%;
         border-radius: 10px;
+    }
+    
+    #post-theme {
+        width: 86%;
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 20px;
+    }
+
+    #theme-container {
+        background-color: hsl(47, 88%, 63%);
+        border-radius: 5px;
+    }
+
+    h3 {
+        font-family: Figtree;
+        font-weight: 800;
+        padding: 8px 18px;
+        margin: 0;
     }
 }
